RabbitTemplate add Opentelemetry tags